--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -238,6 +238,8 @@
   <string name="ConversationFragment_failed_to_open_message">Klarte ikkje opna meldinga</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Du kan sveipa til høgre på ei melding for å svara raskt</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan sveipa til venstre på ei melding for å svara raskt</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Utgåande éi-visnings-mediefiler blir automatisk fjerna etter dei er sende.</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">Du har allereie sett denne meldinga</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Denne eininga har ingen nettlesar installert.</string>
   <!--ConversationListFragment-->
@@ -483,6 +485,7 @@
     <item quantity="other">Du kan ikkje dela meir enn %d element.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Vel mottakarar</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Trykk her for å få denne meldinga til å forsvinna rett etter at ho er vist.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">All media</string>
   <!--MessageRecord-->
@@ -638,6 +641,7 @@ Ver deg sjølv i kvar einaste melding.</string>
   <string name="RegistrationActivity_call">Ring</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">Vis bilde</string>
+  <string name="RevealableMessageView_view_video">Vis video</string>
   <string name="RevealableMessageView_viewed">Vist</string>
   <string name="RevealableMessageView_media">Media</string>
   <!--ScribbleActivity-->
@@ -699,6 +703,9 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="ThreadRecord_missed_call">Usvart anrop</string>
   <string name="ThreadRecord_media_message">Mediemelding</string>
   <string name="ThreadRecord_sticker">Klistremerke</string>
+  <string name="ThreadRecord_view_once_photo">Éivisningsbilete</string>
+  <string name="ThreadRecord_view_once_video">Éivisningsvideo</string>
+  <string name="ThreadRecord_view_once_media">Éivisningsmedia</string>
   <string name="ThreadRecord_s_is_on_signal">%s er på Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Forsvinnande meldingar skrudd av</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Utløpstid for melding endra til %s</string>
@@ -789,6 +796,8 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="MessageNotifier_mark_read">Merk lesen</string>
   <string name="MessageNotifier_media_message">Mediemelding</string>
   <string name="MessageNotifier_sticker">Klistremerke</string>
+  <string name="MessageNotifier_view_once_photo">Éivisningsbilete</string>
+  <string name="MessageNotifier_view_once_video">Éivisningsvideo</string>
   <string name="MessageNotifier_reply">Svar</string>
   <string name="MessageNotifier_signal_message">Signal-melding</string>
   <string name="MessageNotifier_unsecured_sms">Usikra SMS</string>
@@ -934,6 +943,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="QuoteView_audio">Lyd</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_view_once_media">Éivisningsmedia</string>
   <string name="QuoteView_sticker">Klistremerke</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Deg</string>
