--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -531,7 +531,12 @@
     <string name="MediaOverviewActivity_sent_by_s_to_s">Sent by %1$s to %2$s</string>
     <string name="MediaOverviewActivity_sent_by_you_to_s">Sent by you to %1$s</string>
 
-    <!--- NotificationBarManager -->
+    <!-- Megaphones -->
+    <string name="Megaphones_introducing_reactions">Introducing Reactions</string>
+    <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Tap and hold any message to quickly share how you feel.</string>
+    <string name="Megaphones_remind_me_later">Remind me later</string>
+
+    <!-- NotificationBarManager -->
     <string name="NotificationBarManager_signal_call_in_progress">Signal call in progress</string>
     <string name="NotificationBarManager__establishing_signal_call">Establishing Signal call</string>
     <string name="NotificationBarManager__incoming_signal_call">Incoming Signal call</string>
